...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recordLocationTextView"
                android:text="@string/default_text"
                android:textColor="@color/textColor"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dateTextView"
                    android:text="@string/default_text"
                    android:textColor="@color/textColor"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/painEnteredTextView"
                    android:text="@string/default_text"
                    android:textColor="@color/textColor"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/auraEntered"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/aura"/>
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eatenEntered"
                    android:contentDescription="@string/eaten"
                    android:layout_gravity="center_horizontal"/>
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/waterEntered"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/water"/>
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sleepEntered"
                    android:text="@string/default_text"
                    android:textColor="@color/textColor"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/stressEntered"
                    android:text="@string/default_text"
                    android:textColor="@color/textColor"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eyeStrainEntered"
                    android:text="@string/default_text"
                    android:textColor="@color/textColor"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/typeOfPainEntered"
                    android:text="@string/default_text"
                    android:textColor="@color/textColor"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sourceOfPainEntered"
                    android:text="@string/default_text"
                    android:textColor="@color/textColor"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/medicationEntered"
                    android:text="@string/default_text"
                    android:textColor="@color/textColor"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/symptomsEntered"
                    android:text="@string/default_text"
                    android:padding="2dp"
...
        android:layout_height="wrap_content"
        android:text="@string/migraine"
        android:id="@+id/switchMigraineDone"
        android:textOn="@string/done"
        android:textOff="@string/notDone"
...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/migraineDoneView"
            android:background="@color/colorAccent">
        <TextView
...
