...
        android:layout_height="match_parent"
        android:theme="@style/AppTheme">
        <include
            layout="@layout/app_bar_main"/>

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            />
    </RelativeLayout>

...
